# kluris-cli

./: AGENTS.md  CLAUDE.md  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.specs/: registry.md
.specs/kluris-skill-template-refactor/: SPEC.md
packaging/: README.template.md  env.template
scripts/: sync-specmint.py
src/kluris/: __init__.py  cli.py
src/kluris/_packaging/: Dockerfile.template  README.template.md  __init__.py  docker-compose.yml.template  dockerignore.template  env.example.template  env.template  gitignore.template
src/kluris/core/: agents.py  brain.py  companions.py  config.py  git.py  maps.py  mri.py  pack.py
src/kluris/pack/: agent.py  config.py  main.py
src/kluris/pack/providers/: apikey.py  oauth.py
src/kluris/pack/routes/: chat.py
src/kluris/pack/static/: brain-explorer.js  style.css
src/kluris/pack/templates/: chat.html
src/kluris/pack/tools/: brain.py
src/kluris_runtime/: wake_up.py
tests/: conftest.py  test_agents.py  test_brain.py  test_brain_resolution.py  test_branch.py  test_cli_extras.py  test_clone.py  test_companion_cli.py  test_companions.py  test_config.py  test_create.py  test_create_options.py  test_doctor.py  test_dream.py  test_e2e.py  test_frontmatter.py  test_git.py  test_help.py  test_install.py  test_json_output.py  test_linker.py  test_list.py  test_lobe.py  test_maps.py  test_mri.py  test_mri_cmd.py  test_neuron.py  test_open_in_browser.py  test_pull.py  test_push.py  test_recall.py  test_register.py  test_remove.py  test_search.py  test_status.py  test_wake_up.py
tests/pack/: test_agent_loop.py  test_config.py  test_e2e_docker.py  test_middleware.py  test_pack_stager.py  test_providers_apikey.py  test_providers_oauth.py  test_routes_chat.py  test_tools_brain.py
tests/pack/evals/: test_answer_quality.py
tests/pack/fixtures/: docker-compose.test.yml.template
tests/pack/fixtures/mock_llm/: main.py
