[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kluris"
version = "2.5.0"
description = "Turn your AI agents into team subject matter experts with shared, human-curated knowledge"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "pydantic>=2.0",
]

[project.scripts]
kluris = "kluris.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/kluris"]
